--- a/web/src/main/webapp/templates/Users.html
+++ b/web/src/main/webapp/templates/Users.html
@@ -5,7 +5,7 @@
         <ul class="crumbs">
             <li ng-show="accessPoint"><a href="#/devices">Access Points</a></li>
             <li ng-show="accessPoint"><a ng-href="#/device/{{apId}}">Manage {{accessPoint}}</a></li>
-            <li ng-class="{'first': !accessPoint}"><a style="cursor:pointer;">Connected Devices</a></li>
+            <li ng-class="{'first': !accessPoint}"><a style="cursor:pointer;">Connected User Devices</a></li>
         </ul>
 
     </div>
