--- a/web/src/main/webapp/templates/GuestNetwork.html
+++ b/web/src/main/webapp/templates/GuestNetwork.html
@@ -2,7 +2,7 @@
     <div class="span12">
         <h1 class="content-title">Manage {{original.name}} </h1>
         <ul class="crumbs">
-            <li><a href="#/networks">Wireless Networks</a></li>
+            <li><a href="#/networks">Guest Wireless Networks</a></li>
             <li><a style="cursor:pointer;">Manage {{original.name}}</a></li>
         </ul>
     </div>
@@ -13,7 +13,7 @@
 <div class="row-fluid">
     <div class="span12">
         <ul class="content-sidebar">
-            <li><a ng-click="activeItem = 'Configuration'" ng-class="activeItem == 'Configuration' ? 'active' : ''"><i class="icon-asterisk"></i>Network Configuration</a></li>
+            <li><a ng-click="activeItem = 'Configuration'" ng-class="activeItem == 'Configuration' ? 'active' : ''"><i class="icon-asterisk"></i>Guest Network Configuration</a></li>
         </ul>
         <div class="content-pane multi">
             <div class="content">
@@ -23,6 +23,7 @@
                             <ul class="nav nav-tabs">
                                 <li ng-class="activeSubItem == 'Basic' ? 'active' : ''"><a ng-click="activeSubItem = 'Basic'">Basic</a></li>
                                 <li ng-class="activeSubItem == 'Advanced' ? 'active' : ''"><a ng-click="activeSubItem = 'Advanced'">Advanced</a></li>
+                                <li ng-class="activeSubItem == 'Guest' ? 'active' : ''"><a ng-click="activeSubItem = 'Guest'">Guest Policies</a></li>
                             </ul>
 
                             <div ng-show="activeSubItem=='Basic'">
@@ -33,6 +34,11 @@
                             <div ng-show="activeSubItem=='Advanced'">
                                 <h3>Advanced Settings</h3>
                                 <p>Configure the advanced settings for this network.</p>
+                            </div>
+                            
+                            <div ng-show="activeSubItem=='Guest'">
+                                <h3>Guest Policies</h3>
+                                <p></p>
                             </div>
 
                             <div class="row-fluid"><div class="span8 offset2">
@@ -199,6 +205,61 @@
                                             </label>
                                         </div>
                                     </div>
+
+                                </div>
+                                
+                                 <div class="field-section" ng-show="activeSubItem=='Guest'">
+                                 
+	                                 <div ng-class="{'disabled-form': !settings.portal_enabled}">
+	                                        <div class="control-group">
+	                                        <div class="control-label">
+	                                            Authentication
+	                                            <i class="icon-question-sign section-help" tooltip-placement="left" tooltip="If you already have your own hotspot authentication system, choose the [External Portal Server] option to defer to that system. Contact Jive Communications for more information on implementation details."></i>
+	                                        </div>
+	                                        <div class="controls">
+	                                            <label class="radio">
+	                                                <input type="radio" ng-model="settings.auth" value="none" ng-disabled="!settings.portal_enabled">No authentication
+	                                            </label>
+	                                            <label class="radio">
+	                                                <input type="radio" ng-model="settings.auth" value="password" ng-disabled="!settings.portal_enabled">Simple Password
+	                                            </label>
+	                                            <label class="radio">
+	                                                <input type="radio" ng-model="settings.auth" value="custom" ng-disabled="!settings.portal_enabled">External Portal Server
+	                                            </label>
+	                                            <label class="radio">
+	                                                <input type="radio" ng-model="settings.auth" value="tou" ng-disabled="!settings.portal_enabled">Custom Terms and Conditions
+	                                            </label>
+	                                        </div>
+	                                    </div>
+
+                                     <div class="control-group">
+                                            <div class="control-label">Landing Page</div>
+                                            <div class="controls">
+                                                <label class="radio">
+                                                    <input type="radio" ng-model="settings.redirect_enabled" ng-value="false" ng-disabled="!settings.portal_enabled">Redirect to the original URL
+                                                </label>
+                                                <label class="radio">
+                                                    <input type="radio" ng-model="settings.redirect_enabled" ng-value="true" ng-disabled="!settings.portal_enabled">Redirect to promotional URL
+                                                </label>
+                                            </div>
+                                        </div>
+                                        
+                                       <!--  <div class="control-group" ng-show="settings.auth == 'password' || settings.auth == 'none'" ng-class="form.expire.$invalid ? 'error' : ''"> -->
+                                       <div class="control-group" ng-class="form.expire.$invalid ? 'error' : ''">
+                                            <div class="control-label">Expiration</div>
+                                            <div class="controls">
+                                                <select name="expire" ng-model="settings.expire" ng-required="settings.auth == 'password' || settings.auth == 'none'" ng-disabled="!settings.portal_enabled">
+                                                    <option value="480">8 hours</option>
+                                                    <option value="1440">24 hours</option>
+                                                    <option value="2880">2 days</option>
+                                                    <option value="4320">3 days</option>
+                                                    <option value="5760">4 days</option>
+                                                    <option value="10080">7 days</option>
+                                                </select>
+                                                <i ng-hide="form.expire.$error.required" class="icon-ok-sign active"></i>
+                                                <div ng-show="form.expire.$error.required" class="tip help">Please select an expiration period</div>
+                                            </div>
+                                        </div>
 
                                 </div>
 
