--- a/web/src/main/webapp/templates/AccessPointList.html
+++ b/web/src/main/webapp/templates/AccessPointList.html
@@ -10,6 +10,9 @@
 <div class="row-fluid">
     <div class="span12">
         <div class="page-actions">
+            <ul>
+                <li><a ng-href="#/site"><i class="icon-plus-sign"></i>Add Access Points</a></li>
+            </ul>
         </div>
     </div>
 </div>
