--- a/web/src/main/webapp/templates/Site.html
+++ b/web/src/main/webapp/templates/Site.html
@@ -2,59 +2,46 @@
     <div class="span12">
         <h1 class="content-title">Manage {{original.friendly_name}} </h1>
         <ul class="crumbs">
-            <li><a href="#/sites">Sites</a></li>
+            <li><a href="#/devices">Access Points</a></li>
             <li><a style="cursor:pointer;">Manage {{original.friendly_name}}</a></li>
         </ul>
     </div>
 </div>
 <div class="page-actions">
-
 </div>
 <div class="row-fluid">
     <div class="span12">
-        <ul class="content-sidebar">
-            <li><a ng-click="activeItem = 'Macs'" ng-class="activeItem == 'Macs' ? 'active' : ''"><i class="icon-asterisk"></i>Assigned Devices</a></li>
-        </ul>
-        <div class="content-pane multi">
-            <div class="content">
-                <div class="container-fluid">
-                    <div class="row-fluid">
-                        <div class="span12">
-
-                            <div ng-show="activeItem == 'Macs'">
-                                <h2>Assigned Devices</h2>
-                                <p>Provide the list of device MACs for this location. Provide each on their own line.</p>
-                            </div>
-
-                            <div class="row-fluid"><div class="span8 offset2">
-                            <form name="form" class="form-horizontal" novalidate>
-
-                                
-
-                                <div class="field-section" ng-show="activeItem=='Macs'">
-                                    <div class="control-group">
-                                        <label for="macs" class="control-label">
-                                            Assigned Device MACs
-                                            <div class="tip help">provide each MAC address on a seperate line</div>
-                                        </label>
-                                        <div class="controls">
-                                            <textarea id="macs" placeholder="Provide a name..." ng-model="site.macs" rows="15"></textarea>
+        <div class="content">
+            <div class="container-fluid">
+                <div class="row-fluid">
+                    <div class="span12">
+                            <h2>Assigned Devices</h2>
+                            <p>Provide the list of device MACs for this location. Provide each on their own line.</p>
+                        <div class="row-fluid">
+                            <div class="span8 offset2">
+                                <form name="form" class="form-horizontal" novalidate>
+                                    
+                                    <div class="field-section">
+                                        <div class="control-group">
+                                            <label for="macs" class="control-label">
+                                                Site Access Point MACs
+                                                <div class="tip help">provide each MAC address on a seperate line</div>
+                                            </label>
+                                            <div class="controls">
+                                                <textarea id="macs" placeholder="Provide a name..." ng-model="site.macs" rows="15"></textarea>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-
-                            </form>
-                            </div></div>
-
+                                </form>
+                            </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
-    <div class="update-controls" ng-show="isNew || isDirty()">
-        <button class="btn btn-primary" ng-disabled="form.$invalid" ng-click="update()">{{isNew ? "Create" : "Update"}}</button>
+    <div class="update-controls" ng-show="isDirty()">
+        <button class="btn btn-primary" ng-disabled="form.$invalid" ng-click="updateMac()">Add</button>
         <button class="btn btn-link clear-form" ng-hide="isNew" ng-click="reset()">Discard Changes</button>
     </div>
 </div>
