--- a/web/src/main/webapp/templates/Network.html
+++ b/web/src/main/webapp/templates/Network.html
@@ -3,7 +3,7 @@
         <h1 class="content-title">{{isNew ? "Create New Network" : "Manage" }} </h1>
         <ul class="crumbs">
             <li><a href="#/networks">Wireless Networks</a></li>
-            <li><a style="cursor:pointer;">Manage {{original.name}}</a></li>
+            <li><a style="cursor:pointer;">{{isNew ? "Create New Network" : "Manage" }}</a></li>
         </ul>
     </div>
 </div>
